# crygan

./: .gitignore  README.md  chaotic_entropy.npy  main.py  pyproject.toml  test.py
outputs/keys/: gan_generated_key.npy  key.b64  key.hex
outputs/logs/: training_metrics.csv
randomness_testsuite/: FrequencyTest.py  RandomExcursions.py  RunTest.py  Spectral.py  TemplateMatching.py  Universal.py
