[project]
name = "crygan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.3.1",
    "cryptography>=45.0.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pycryptodome>=3.23.0",
    "qrcode[pil]>=8.2",
    "scipy>=1.15.3",
    "sounddevice>=0.5.2",
    "statsmodels>=0.14.4",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = ["venv"]
