[project]
name = "crygan"
version = "0.1.0"
description = "A research-grade system for cryptographic key generation using hybrid entropy from physical chaotic sources and deep generative models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitstring>=4.3.1",
    "cryptography>=45.0.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pycryptodome>=3.23.0",
    "pyentrp>=1.0.0",
    "qrcode[pil]>=8.2",
    "randtest>=0.7",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "sounddevice>=0.5.2",
    "statsmodels>=0.14.4",
    "termcolor>=3.1.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = ["venv"]
